# ebm2onnx

./: .bumpversion.cfg  .bumpversion.toml  .coveragerc  HISTORY.rst  LICENSE  MAINTAINERS.md  README.rst  pyproject.toml  requirements.txt  requirements_test.txt  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  publish.yml
binder/: requirements.txt
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  reference.rst  requirements.txt  usage.rst
ebm2onnx/: __init__.py  context.py  convert.py  ebm.py  graph.py  operators.py  operators_ml.py  sklearn.py  utils.py
examples/: convert.ipynb  explain_local.ipynb  sklearn-pipeline.ipynb
tests/: __init__.py  test_convert.py  test_ebm.py  test_graph.py  test_operators.py  test_operators_ml.py  test_pandas_dtype.py  test_sklearn.py  utils.py
